fix(WhiteSpaces): Tidak ada lagi white spaces di bawah pas laman kosong

--- a/src/component/ApresiasiCarousel/ApresiasiCarousel.scss
+++ b/src/component/ApresiasiCarousel/ApresiasiCarousel.scss
@@ -22,11 +22,16 @@
       height: 40vh;
     }
 
+    .apresiasi-item {
+      object-fit: contain;
+      height: inherit;
+      width: auto;
+    }
+
     div {
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
-      // justify-content: center;
       align-content: center;
       height: 100%;
       width: 100%;
